# JTW8-CMOR438-DataSci-ML

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: PROJECT_STRUCTURE.md
examples/: README.md
examples/supervised_learning/Decision Trees/: Algerian_forest_fires_dataset_UPDATE.csv  README.md  decision_tree.ipynb
examples/supervised_learning/KNN/: README.md  knn.ipynb
examples/supervised_learning/Linear Regression/: README.md  linear_regression.ipynb
examples/supervised_learning/Logistic Regression/: README.md  logistic_regression.ipynb
examples/supervised_learning/Neural Networks/: README.md  neural_network.ipynb
examples/supervised_learning/Perceptron/: README.md  perceptron.ipynb
examples/supervised_learning/Random Forests/: README.md  random_forest.ipynb
examples/supervised_learning/Voting Models/: README.md  voting.ipynb
examples/unsupervised_learning/DBSCAN/: README.md  (+1 more)
src/: README.md
src/ml_package/: __init__.py
src/ml_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/supervised_learning/: test_classification_metric_methods.py  test_decision_tree.py  test_knn.py  test_linear_regression.py  test_logistic_regression.py  test_neural_network.py  test_perceptron.py  test_random_forest.py  test_regression_metric_methods.py  test_voting.py
tests/unsupervised_learning/: test_dbscan.py  test_kmeans.py  test_pca.py
tests/utils/: test_classification_metric_methods.py  test_classification_metrics.py  test_preprocessing.py  test_regression_metric_methods.py  test_regression_metrics.py
(+21 files in other folders)
